# LitLaunch

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  browser_support.md  cli.md  diagnostics_page.md  docs_structure_standard.md  inspect.md  installation.md  integration.md  overview.md  philosophy.md  quickstart.md  runtime_events.md  security.md  troubleshooting.md  window_monitoring.md
docs/Public/FAQ/: host-sizing.md
docs/Public/Guides/: host-sizing.md  installation.md  overview.md  philosophy.md  quickstart.md
docs/Public/Guides/integration/: index.md  rolethread.md
docs/Public/Reference/: architecture.md  browser-support.md  cli.md  diagnostics-page.md  inspect.md  runtime-events.md  security.md  window-monitoring.md
docs/Public/Troubleshooting/: troubleshooting.md
docs/integration/: packaging_notes.md  rolethread.md
docs/internal/: README.md  known_beta_issues.md  rolethread_handoff_checklist.md  rolethread_integration_plan.md  rolethread_litlaunch_manual_test_plan.md  rolethread_runtime_mapping.md  rolethread_test_matrix.md
docs/internal/architecture/: rolethread_runtime_mapping.md
docs/internal/audits/: litlaunch_dominate_audit.md  litlaunch_security_audit_0_91_23b1.md  rolethread_pre_publish_weakness_hunt.md
docs/internal/research/: cli_surface_recon.md  visible_surface_recon.md  window_title_monitor_handoff.md
docs/internal/validation/: release_validation_notes.md  rolethread_litlaunch_manual_test_plan.md
docs/release/: release-notes.md
docs/research/: host_sizing_geometry_authority_spike.md  host_sizing_policy_state_machine.md  host_sizing_private_integration.md  host_sizing_private_production_activation.md  host_sizing_public_surface_implementation.md  host_sizing_shortcut_process_authority.md  host_sizing_transport_trust_foundation.md  host_sizing_windows_mutation_capability.md  host_sizing_windows_validation_matrix.md  litbridge_host_sizing_consumption_recon.md  public_host_sizing_surface_design.md
examples/minimal_app/: README.md  app.py
scripts/: check_release.py
src/litlaunch/: __init__.py  __main__.py  _browser_authority.py  _host_sizing_authority.py  _host_sizing_config.py  _host_sizing_geometry.py  _host_sizing_policy.py  _host_sizing_production.py  _host_sizing_runtime.py  _host_sizing_spike.py  _host_sizing_transport.py  _host_sizing_window.py  _protocols.py  _windows_shell.py  artifacts.py  backend.py  backend_start.py  browser_profiles.py  cli.py  cli_commands.py  cli_common.py  cli_config.py  cli_inspect.py  colors.py  config.py  console.py  console_style.py  diagnostics.py  diagnostics_page.py  events.py  exceptions.py  exposure.py  governance.py  health.py  host_sizing.py  inspect.py  launcher.py  lifecycle.py  monitored.py  monitored_browser.py  (+21 more)
src/litlaunch/browsers/: __init__.py  base.py  chrome.py  default.py  edge.py  launch.py  registry.py
src/litlaunch/cli/: __init__.py  __main__.py  commands.py  config.py  create.py  help.py  inspect.py  main.py  preview.py  test.py
src/litlaunch/inspect/: __init__.py  collect.py  models.py  render_bundle.py  render_html.py  render_json.py  render_text.py  streamlit_check.py
src/litlaunch/profiles/: __init__.py  core.py  detection.py  rendering.py  state.py  wizard.py  writer.py
src/litlaunch/windowing/: __init__.py  base.py  noop.py  polling.py  title_match.py  windows.py
tests/: test_backend.py  test_browser_authority.py  test_browser_base.py  test_browser_detection.py  test_browser_launch.py  test_browser_profiles.py  test_ci_workflow.py  test_cli.py  test_config.py  test_console.py  test_diagnostics_page.py  test_events.py  test_examples.py  test_exposure.py  test_health.py  test_host_sizing_authority.py  test_host_sizing_geometry.py  test_host_sizing_policy.py  test_host_sizing_production.py  test_host_sizing_public.py  test_host_sizing_runtime.py  test_host_sizing_spike.py  test_host_sizing_transport.py  test_host_sizing_window.py  test_imports.py  test_inspect.py  test_launcher_browser.py  test_launcher_runtime.py  test_lifecycle.py  test_metadata.py  test_monitored.py  test_no_shell_true.py  test_platforms.py  test_ports.py  test_process.py  test_profile_detection.py  test_profile_wizard.py  test_profile_writer.py  test_profiles.py  test_release_hygiene.py  (+7 more)
tests/integration/: test_real_streamlit_smoke.py
