[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litlaunch"
dynamic = ["version"]
description = "A lightweight launcher/runtime layer for Streamlit applications."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "LatticeFoundry" },
]
maintainers = [
  { name = "LatticeFoundry" },
]
keywords = ["streamlit", "launcher", "runtime", "browser", "webapp"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/LatticeFoundry/litlaunch"
Repository = "https://github.com/LatticeFoundry/litlaunch"
Issues = "https://github.com/LatticeFoundry/litlaunch/issues"

[project.scripts]
litlaunch = "litlaunch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/litlaunch"]

[tool.hatch.build.targets.wheel.force-include]
"src/litlaunch/py.typed" = "litlaunch/py.typed"

[tool.hatch.version]
path = "src/litlaunch/version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
