[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litlaunch"
dynamic = ["version"]
description = "Runtime-governance and operational-launch tooling for Streamlit applications."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "LatticeFoundry" },
]
maintainers = [
  { name = "LatticeFoundry" },
]
keywords = ["streamlit", "launcher", "runtime", "browser", "webapp"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.19",
  "packaging>=24",
  "pytest>=8",
  "ruff>=0.5",
  "tomli>=2; python_version < '3.11'",
  "twine>=6",
]

[project.urls]
Homepage = "https://github.com/Lattice-Foundry/LitLaunch"
Repository = "https://github.com/Lattice-Foundry/LitLaunch"
Issues = "https://github.com/Lattice-Foundry/LitLaunch/issues"
PyPI = "https://pypi.org/project/litlaunch/1.1.3/"

[project.scripts]
litlaunch = "litlaunch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/litlaunch"]

[tool.hatch.build.targets.wheel.force-include]
"src/litlaunch/py.typed" = "litlaunch/py.typed"

[tool.hatch.build.targets.sdist]
# Ship only public documentation (docs/README.md, docs/Public/**, docs/assets/**).
# Every internal documentation lane and the internal workspace standard are
# excluded so internal records cannot reach the public sdist. scripts/check_release.py
# enforces this with an allowlist guard so a new internal lane cannot leak silently.
exclude = [
  "/.claude",
  "/docs/architecture",
  "/docs/archive",
  "/docs/audits",
  "/docs/docs_structure_standard.md",
  "/docs/implementation",
  "/docs/migrations",
  "/docs/planning",
  "/docs/release",
  "/docs/research",
  "/docs/security",
  "/docs/testing",
  "/notes",
]

[tool.hatch.version]
path = "src/litlaunch/version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["litlaunch"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "_colorize",
  "tomli",
  "tomllib",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
